--- a/INICIANDO-JPA-HIBERNATE/pom.xml
+++ b/INICIANDO-JPA-HIBERNATE/pom.xml
@@ -41,7 +41,17 @@
 <artifactId>javax.servlet-api</artifactId>
 <version>3.1.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.6</version>
+</dependency> 
+
 </dependencies>
+
+
 
   <build>
     <finalName>INICIANDO-JPA-HIBERNATE</finalName>
